# smollbonk

./: .gitignore  README.md  pyproject.toml  requirements.txt  smollbonk.py
bots/: deoxys.bonk  deoxys.sbonk  rayquaza.bonk  rayquaza.sbonk
